# crewai_loop_walkthrough

./: README.MD  requirements.txt
Conditional_flow/: and_flow.py  or_flow.py  router_flow.py
Structured_flow/: structured_flow.py
Unstructure_flow/: unstructured_flow.py
basic_flow/: basic_flow.py
book_author_crew/book_writing_flow/: README.md  The_Current_State_of_AI_in_November_of_2024_-_Trends_Across_the_Industry.md  pyproject.toml
book_author_crew/book_writing_flow/src/book_writing_flow/: main.py
book_author_crew/book_writing_flow/src/book_writing_flow/crews/outline_book_crew/: outline_crew.py
book_author_crew/book_writing_flow/src/book_writing_flow/crews/outline_book_crew/config/: agents.yaml
book_author_crew/book_writing_flow/src/book_writing_flow/crews/write_book_chapter_crew/: write_book_chapter_crew.py
book_author_crew/book_writing_flow/src/book_writing_flow/crews/write_book_chapter_crew/config/: agents.yaml
crew_and_flow/demo_flow/: poem.txt  pyproject.toml
crew_and_flow/demo_flow/src/demo_flow/: main.py
crew_and_flow/demo_flow/src/demo_flow/crews/poem_crew/: poem_crew.py
crew_and_flow/demo_flow/src/demo_flow/crews/poem_crew/config/: agents.yaml
